--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
+  <head>
+    <title>My name is twix</title>
+  </head>
   <body style="padding: 0; margin: 0">
     <img src="/api/twix" style="max-width: 100%; height: auto" />
+    <div style="margin-top: 20px">
+      <a href="#" onClick="window.location.reload();">Another one?</a>
+    </div>
   </body>
 </html>
